# roboteam_central_server

./: CMakeLists.txt  main.cpp
include/: central_utils.hpp  connection.hpp  interface.hpp  modulehandler.hpp  mutex.hpp  server.hpp  type_traits.hpp
src/: server.cpp
test/: pair_test.cpp  utils.hpp
